--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "fs": "0.0.1-security",
     "fs-extra": "^7.0.1"
   },
-  "repository": ""
+  "repository": "https://github.com/alexranc/vscode-react-folder-component"
 }
