--- a/templates/functionalCssModule.template
+++ b/templates/functionalCssModule.template
@@ -1,5 +1,7 @@
 import React from 'react';
-import "./style.module.scss";
+import Styles from "./style.module.scss";
+
+const { style } = Styles;
 
 const {componentName} = () => {
 	return (
