--- a/templates/functionalCssModuleAlt.template
+++ b/templates/functionalCssModuleAlt.template
@@ -1,7 +1,7 @@
 import React from 'react';
-import * as style from './style.module.scss';
+import * as Styles from './style.module.scss';
 
-const { style } = style;
+const { style } = Styles;
 
 const {componentName} = () => {
 	return (
